--- a/bonus/index.html
+++ b/bonus/index.html
@@ -35,9 +35,9 @@
 		<div class="ms-auto d-flex flex-column align-items-center">
 			<label for="difficulty">Difficoltà:</label>
 			<select name="difficulty" class="mx-2">
-				<option value="10">Facile</option>
-				<option value="12">Medio</option>
-				<option value="15">Difficile</option>
+				<option value="12">Facile</option>
+				<option value="16">Medio</option>
+				<option value="20">Difficile</option>
 			</select>
 		</div>
 		<div class="grid-sizes d-flex flex-column">
@@ -49,7 +49,7 @@
 				<input type="number" name="columns" value="7" min="7" max="10" onKeyDown="return false">
 			</div>
 		</div>
-		<button class="px-4 ms-2 rounded-3" id="btn-play">Gioca</button>
+		<button class="px-4 py-1 ms-3 rounded-3" id="btn-play">Gioca</button>
 
 	</header>
 
